--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,26 @@
 body {
     font-family: 'Alatsi', sans-serif;
+    background: url("../images/GCS.jpg");
+    background-position: top;
+    background-size: cover;
+    height: 600px;
 }
 
 .jumbotron.jumbotron-fluid {
-    width: 90%;
+    width: 50%;
     text-align: center;
-    margin-left: 5%;
-    background: white;
+    background: blanchedalmond;
     color: black;
     padding-top: 5px;
+    margin: 0 auto;
 }
 
 h1 {
-    background: lightgray;
+    background: khaki;
 }
 
 .lead {
-    background: lightgray;
+    background: khaki;
 }
 
 .trainTimes {
@@ -30,7 +34,7 @@ h1 {
     font-weight: bold;
     padding: 5px;
     margin-bottom: 0;
-    margin-left: 70px;
+    margin-left: 33px;
     border: solid 2px black;
     width: 90%;
 }
@@ -39,7 +43,7 @@ h1 {
     color: black;
     font-weight: bold;
     padding: 0.1%;
-    background: lightgrey;
+    background: khaki;
 }
 
 .table {
@@ -61,7 +65,7 @@ label {
     color: black;
     font-weight: bold;
     padding: 0.5%;
-    background: lightgrey;
+    background: khaki;
     margin-bottom: 0;
 }
 
